[gd_scene load_steps=12 format=2]

[ext_resource path="res://componentes/cena_fundo_telas.tscn" type="PackedScene" id=1]
[ext_resource path="res://ativos/crash-a-like.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://telas/script_cena_desempenho.gd" type="Script" id=3]
[ext_resource path="res://ativos/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="CenaFundo" parent="." instance=ExtResource( 1 )]

[node name="Node2D" type="Node2D" parent="."]
z_index = 2

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 1318.0
margin_bottom = 734.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="RichTextLabel" parent="Node2D"]
modulate = Color( 0.992157, 1, 0, 1 )
margin_left = 371.491
margin_top = 15.1225
margin_right = 681.491
margin_bottom = 81.1225
custom_fonts/normal_font = SubResource( 1 )
text = "DESEMPENHO"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D"]
margin_left = 45.0
margin_top = 108.0
margin_right = 966.0
margin_bottom = 213.0
custom_fonts/normal_font = SubResource( 5 )
meta_underlined = false
text = "*** confira seu desempenho no jogo"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Node2D"]
margin_left = 44.7004
margin_top = 251.903
margin_right = 455.7
margin_bottom = 288.903
custom_fonts/normal_font = SubResource( 6 )
text = "Pontos:"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="Node2D"]
margin_left = 549.929
margin_top = 251.903
margin_right = 960.929
margin_bottom = 288.903
custom_fonts/normal_font = SubResource( 9 )
text = "Posição no ranking:"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="Node2D"]
margin_left = 49.2996
margin_top = 331.159
margin_right = 969.3
margin_bottom = 368.159
custom_fonts/normal_font = SubResource( 10 )
custom_constants/line_separation = 1
text = "N° fase       -     Tempo gasto      -      Pontos      -      Quantidade vidas      -      Inimigos matados      -      Data"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Node2D"]
margin_left = 43.0
margin_top = 358.0
margin_right = 972.0
margin_bottom = 498.0
custom_fonts/font = SubResource( 8 )
custom_constants/line_separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="Node2D"]
margin_left = 45.0794
margin_top = 540.379
margin_right = 350.079
margin_bottom = 584.379
custom_fonts/font = SubResource( 4 )
text = "VOLTAR AO MENU PRINCIPAL"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="Node2D"]

[node name="HTTPRequest2" type="HTTPRequest" parent="Node2D"]
[connection signal="pressed" from="Node2D/Voltar" to="." method="botao_voltar_tela_autenticado"]
[connection signal="request_completed" from="Node2D/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="Node2D/HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
